--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ path = "src/lib.rs"
 syn = { version = "2.0", features = ["extra-traits"] }
 quote = "1.0"
 proc-macro2 = "1.0"
+[dev-dependencies]
+trybuild = "1"
