--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,7 @@ syn = { version = "2.0", features = ["extra-traits"] }
 quote = "1.0"
 proc-macro2 = "1.0"
 proc-macro-error = "1"
+patricia_tree = "0.6.3"
+
 [dev-dependencies]
 trybuild = "1"
