--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ quote = "1.0"
 proc-macro2 = "1.0"
 proc-macro-error = "1"
 patricia_tree = "0.6.3"
+itertools = "0.12.0"
+smallvec = "1"
 
 [dev-dependencies]
 trybuild = "1"
