--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/lib.rs"
 [dependencies]
 syn = { version = "2.0", features = ["extra-traits"] }
 quote = "1.0"
+prettyplease = "0.2"
 proc-macro2 = "1.0"
 proc-macro-error = "1"
 patricia_tree = "0.6.3"
